...
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0lj-Zb-4BC">
                    <rect key="frame" x="25" y="69" width="112" height="40.5"/>
                    <fontDescription key="fontDescription" name="Baskerville-Bold" family="Baskerville" pointSize="35"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Apple Books" translatesAutoresizingMaskIntoConstraints="NO" id="kA0-RP-0nU">
                    <rect key="frame" x="20" y="114.5" width="374" height="56"/>
                    <textInputTraits key="textInputTraits" returnKeyType="search"/>
                </searchBar>
                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" sectionIndexMinimumDisplayRowCount="10" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="RKk-1A-MCr">
                    <rect key="frame" x="20" y="210" width="374" height="632"/>
                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
